# financial-chat

./: .dockerignore  .env.example  .gitignore  README.md  api.dockerfile  pyproject.toml  ui.dockerfile
app/: server.py  ui.py
app/chains/: agent.py  templates.py
app/features/: chart.py  screener.py  technical.py
app/tools/: risk_management.py  stock_charts.py  stock_relative_strength.py  stock_sentiment.py  stock_stats.py  types.py  utils.py
copilot/: .workspace
copilot/financial-chat-api/: manifest.yml
copilot/financial-chat-ui/: manifest.yml
