[tool.poetry]
name = "financial-chat"
version = "0.1.0"
description = "The Trading Dude Abides"
authors = ["Seth Hobson <seth@major7apps.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openbb = {version = "4.1.3", extras = ["all"]}
quantstats = "^0.0.62"
langchain = "^0.1.16"
langsmith = "^0.1.31"
langserve = { extras = ["all"], version = "^0.0.51" }
black = "^24.3.0"
ipython = "^8.22.2"
pyimgur = "^0.6.0"
kaleido = "0.2.1"
openbb-oecd = "1.1.1"
langchain-anthropic = "^0.1.8"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
yfinance = "^0.2.37"
streamlit = "^1.33.0"
watchdog = "^4.0.0"
numexpr = "^2.10.0"
scikit-learn = "^1.4.1.post1"
vadersentiment = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
